Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18453

Shaders examples do not run at all

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt3D TP1
    • 4.7.2
    • Qt3D
    • None
    • d8b772e42bfb8019a43a12f019a85be2abb2c0b6, 4b5639775eb48acf0972d93e62f925c55413fad8, 9cd739a2159a4b520fa20bb30afcf7c61b59416c

    Description

      The shaders examples have been refactored and now don't work. There were four of them, all slight variations on a theme, with "teapot" and "shader" in the name.

      These have been combined into a tabbed QML UI that is meant to display all four, and allow tabbing between.

      However the app does not seem to display anything on the screen, and displays a "bad app" icon under Mac.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            debhal Julian de Bhal (closed Nokia identity) (Inactive)
            sarasmit Sarah Smith (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes