Fix shaders multitexture examples QTBUG-18453

Change-Id: I1d8b8417efe8340c0b31f68c1c70e6007a837b7c